fixing homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://perezmas.github.io/react-tictactoe",
+  "homepage": "https://perezmas.github.io/react-tictactoe",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
